# libAllocationTracer

./: CMakeLists.txt  README.md  liballocationtracer.cpp  run_test.sh
include/: Context.hpp  Detour.hpp  FindAllocatedType.hpp  Originals.hpp  TraceGuard.hpp
include/trace_destination/: stdout.hpp
src/: Context.cpp  FindAllocatedType.cpp  Originals.cpp  TraceGuard.cpp  liballocationtracer.cpp
src/trace_destination/: stdout.cpp
test/: AllocationTracerTestApp1  CMakeLists.txt  app.cpp
test/base/: BaseTest  CMakeLists.txt  base.cpp
test/stl/: .gitignore  CMakeLists.txt  STLTest  stl.cpp
